--- a/components/FiltersGroup/index.css
+++ b/components/FiltersGroup/index.css
@@ -32,3 +32,59 @@
   justify-content: space-between;
   align-items: center;
 }
+.select-label-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 30px;
+}
+.select-category-label {
+  color: #12022f;
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+.btn-style {
+  background-color: transparent;
+  text-align: left;
+  border-width: 0px;
+  margin: 10px 0px 10px;
+  padding: 0px;
+  font-family: 'Roboto';
+  color: #475569;
+  font-size: 20px;
+  cursor: pointer;
+}
+.category-para {
+  margin: 0px;
+}
+.rating-image {
+  width: 70%;
+  height: 35px;
+}
+.rating-btn-style {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  background-color: transparent;
+  text-align: left;
+  border-width: 0px;
+  margin: 10px 0px 10px;
+  padding: 0px;
+  font-family: 'Roboto';
+  color: #475569;
+  font-size: 20px;
+  cursor: pointer;
+}
+.clear-filters-btn {
+  border: 2px solid #0967d2;
+  background-color: transparent;
+  padding: 10px;
+  color: #0967d2;
+  font-family: 'Roboto';
+  font-weight: bold;
+  cursor: pointer;
+}
